modify uri